# task-manager-interface

./: .gitignore  CMakeLists.txt  README.md  myData.json  personData.json  saveData.json  taskData.json
Header/: DBManager.hpp  Person.hpp
Test/: DBManagerTests.cpp  test.cpp
header/: Task.hpp  person.hpp  tasks.hpp
include/: DBManager.h  DateSorter.h  ImportanceSorter.h  Person.h  Task.h  TaskSorter.h  UserInterface.h
src/: DBManager.cpp  DateSorter.cpp  ImportanceSorter.cpp  Person.cpp  Task.cpp  TaskSorter.cpp  UserInterface.cpp  main.cpp  person.cpp  tasks.cpp
test/: DBManagerTests.cpp  test.cpp
tests/: test.cpp
